--- a/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
+++ b/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
@@ -14,7 +14,7 @@ Módulo Personal
         <button type="submit" class="btn btn-primary mr-1" id="idSearchSp">Buscar</button>
     </div>
 </form>
-<a target="_blank" href="{% url 'login:generar_usuarios_pdf' %}" class="btn btn-secondary mt-3"> Generar PDF de Usuarios</a>
+<a target="_blank" href="{% url 'login:generar_usuarios_pdf' %}" class="btn btn-secondary my-3"> Generar PDF de Usuarios</a>
 
 {% endblock %}
 
