--- a/Autenticacion/Modulos/Agente/Reportes/templates/crear_reportes.html
+++ b/Autenticacion/Modulos/Agente/Reportes/templates/crear_reportes.html
@@ -24,11 +24,11 @@
 
         <div class="row pb-2">
             <!-- Novedad y Prioridad -->
-            <div class="col-md-6">
+            <div class="col-6">
                 <h5>Novedad</h5>
                 {{ form.novedad }}
             </div>
-            <div class="col-md-6">
+            <div class="col-6">
                 <h5>Prioridad</h5>
                 {{ form.prioridad }}
             </div>
